# PruebasITK

./: CMakeLists.txt  CoocurrenceAnalysis.cpp  CrecimientoRegiones.cpp  FractalAnalysis.cpp  HolaMundo.cxx  HolaMundo_Filtros.cxx  HolaMundo_Mesh.cxx  HolaMundo_PointSet.cxx  HolaMundo_SpatialObject.cxx  IntensityAndTextureImages.cpp  IntensityImage.cpp  PruebasVarianza.cpp  SegmentationIntensityAndTextureImages.cpp  SegmentationIntensityAndTextureImages.h  itkScalarToTextureImageFilter.h  itkScalarToTextureImageFilter.txx  m1.mhd
