CMAKE_MINIMUM_REQUIRED(VERSION 2.4)

IF(COMMAND CMAKE_POLICY)
  CMAKE_POLICY(SET CMP0003 NEW)
ENDIF(COMMAND CMAKE_POLICY)

Project (HolaMundo)

FIND_PACKAGE(ITK)

IF(ITK_FOUND)
	INCLUDE(${ITK_USE_FILE})
ELSE(ITK_FOUND)
	MESSAGE(FATAL_ERROR 
		"ITK NOT FOUND. PLEASE SET ITK_DIR.")
ENDIF(ITK_FOUND)

ADD_EXECUTABLE(HolaMundo CoocurrenceAnalysis.cpp itkScalarToTextureImageFilter.h)

TARGET_LINK_LIBRARIES(HolaMundo ${ITK_LIBRARIES})


